[metadata]
name = nuage-ironic-inspector
summary = Nuage hardware introspection plugin for OpenStack Bare Metal
description-file = README.rst
home-page = http://docs.openstack.org/developer/ironic-inspector/
license = ASL 2.0
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2

[files]
packages =
    nuage_ironic_inspector

[entry_points]
ironic_inspector.hooks.processing =
    nuage_lldp = nuage_ironic_inspector.plugins.local_link_connection:NuageLocalLinkConnectionHook

[pbr]
warnerrors = True
